# applied-ai-experiments

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: new-experiment.yml
.github/scripts/: build-demos.sh  create-experiment-from-issue.py  generate-index.py  test-hub-build.sh  update_readme.py  validate-experiments.py
.github/templates/benchmark/: info.yaml
.github/templates/evaluation/: README.md  brief.md  info.yaml
.github/templates/experiment-minimal/: info.yaml
.github/templates/marimo/: info.yaml
.github/templates/notebook/: info.yaml
.github/templates/prototype/: info.yaml
.github/templates/research/: info.yaml
.github/workflows/: create-experiment.yml  deploy-hub.yml  update-index.yml  validate-metadata.yml
experiments/ai-provisioning-guide/: README.md  brief.md  info.yaml
experiments/example-experiment/: brief.md  info.yaml  readme.md
experiments/mcp-web-map/: README.md  brief.md  info.yaml
experiments/semantic-document-search/: README.md  brief.md  info.yaml
experiments/simple-python-uv-experiment/: info.yaml  resourcewatch_datasets.csv
experiments/simple_python_uv_experiment/: experiment_one.py  info.yaml  readme.md
experiments/wri-asset-locator/: README.md  brief.md  fetch_datasets_global_forest_watch.py  fetch_datasets_resource_watch_datasets.py  fetch_datasets_wri_data_explorer.py  info.yaml  readme.md
hub/: README.md  astro.config.mjs  package.json
templates/experiment-minimal/: brief.md  info.yaml  readme.md
(+150 files in other folders)
